--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -8,7 +8,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, error = FALSE, message = FALSE)
 ```
 
 ## Introduction
@@ -62,4 +62,37 @@ Given that a neural region is functionally active in response to other people's 
 
 What does a particular region's involvement tell us about this link?
 
-## 
+## The study
+
+Two waves, only participants with fMRI at wave 1 & 2.
+
+>- $N = 56 (N_{\text{male}} = 26$)
+>- fMRI during passive viewing of emotional faces (NimStim).
+>- Questionnaires
+
+## Measures
+
+Measures of target constructs:
+
+- Interpersonal Reactivity Index (cite)
+    - Empathic Concern
+    - Personal Distress
+- Questions from the 4-H Study of Positive Youth Development survey (Lerner et al., 2005)
+    - >During an average week, how many 
+hours do you spend helping other people without getting paid (such as helping out at a hospital, 
+daycare center, food shelf, youth program, community service agency, or doing other things)
+    - Item asking if they are often kind to other children.
+
+## Descriptives at a glance
+
+```{r}
+library(tidyverse)
+knitr::kable(
+    tribble(
+        ~Wave, ~`Age Mean`, ~`(SD)`,
+        1, 10.1, '(.31)',
+        2, 13.1, '(.31)'
+        
+    )
+)
+```
