--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -180,13 +180,53 @@ _A lot_ of intercept-to-intercept correlations at p < .005.
 
 For example, Agreeableness (and facet) intercepts negatively correlate with financial aspirations, materialism, unmitigated self-interest, and individualism.
 
-Lagged effects include
+Lagged effects:
+
 - Mature Values $+ \rightarrow$ Openness 
 - Materialism  $- \rightarrow$ Social-self-regulation
-- Vertical Individualism $- \rightarrow$ Compassion, Politeness, Intellect, and O. 
+- Vertical Individualism $- \rightarrow$ Compassion, Politeness, Intellect, and Openness. 
 - Openness $\leftarrow - \rightarrow$ Vertical Individualism
 
+## Substantive takeaway
 
+- Evidence _against_ essentialist trait perspective
+- Culture shapes the person (possibly more at different ages)
+- Much between & within person correlation
+
+## Network Models
+
+- Massively bi-variate approach is lacking
+- Good recent work on psychological networks [[1](http://psych-networks.com/7-new-papers-network-replicability/), [2](http://sachaepskamp.com/Dissertation)]
+- Preliminary work on this data set is promising
+
+## [Networks of personality](https://figshare.com/articles/A_Network_Approach_to_Characterizing_Personality_in_the_Life_and_Time_Longitudinal_Sample/1447279/2)
+
+Bootstrapped, regularized partial-correlation networks and network statistics (using UO high-performance computing cluster)
+
+![](personality_network.png)
+
+## Centrality statistcs
+
+
+
+## Advantages and pitfalls of the approach
+
+- The strength: 
+    - Rich characterization of mediating relations
+    - Characterize propagation
+    - Modularity without unknown causes
+- The pitfalls: 
+    - Mediation 
+    - Unclear how to characterize uncertainty
+    - Each node is a construct (with measurement issues)
+
+## Future directions
+
+Claims about ties between nodes strengthened by
+
+- High-frequency longitudinal data
+- Appropriate modeling of variance (e.g. LCM-SR, RI-CLPM)
+    - Between-person correlations make bad edges
 
 # Interim summary
 
