--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -47,12 +47,9 @@ Brief discussion of project results and key methodological insights
 1. Neural correlates of empathy-motivated prosocial behavior
 2. Interactions between personality and values in adult development
 3. The Yellow Light Game and adolescent risk-taking
+4. Ongoing dissertation: Measuring adolescent-developing motivations
 
-Ongoing dissertation work
-
-- Measuring adolescent-developing motivations
-
-# Neural correlates of empathy-motivated prosocial behavior <small>([2016](https://dx.doi.org/10.17605/OSF.IO/RJH48))</small>
+# 1. Neural correlates of empathy-motivated prosocial behavior <small>([2016](https://dx.doi.org/10.17605/OSF.IO/RJH48))</small>
 
 Do individual differences in empathic concern predict future prosocial behavior? Is this mediated by "affective resonance" neural processes?
 
@@ -151,7 +148,7 @@ or, what I've learned since then:
     - [Simulations](https://jflournoy.github.io/2016/09/02/mediation_power/#misspecification): With data from three variables that are _only_ correlated, mediation models that _don't_ control for prior levels of both the outcome and mediator systematically show evidence of mediation.
     - Even in longitudinal data, model-misspecification leads to eroneous conclusions.
     
-# Interactions between personality and values in adult development <small>(submitted)</small>
+# 2. Interactions between personality and values in adult development <small>(submitted)</small>
 
 Personality changes throughout adulthood. Do changes in values drive some of this change? How to best model these influences?
 
@@ -282,7 +279,7 @@ The Stoplight Game (Steinberg et al, 2008) has been used in dozens of experiment
 
 ## The Yellow Light Game
 
-Customizable. This version:
+The [YLG](https://dsn.uoregon.edu/research/yellow-light-game/) software is Customizable. This version:
 
 - Performance balanced between risk and safe options
 - Decision is required
@@ -310,6 +307,8 @@ Customizable. This version:
 
 ## Many data
 
+All analyses in R package: [`ylglearning`](https://jflournoy.github.io/ylglearning/)
+
 <img src = 'https://jflournoy.github.io/ylglearning/articles/ylg_descriptives_and_diagnostics_files/figure-html/rawpropplot-1.png' style = 'width: 100%' />
 
 ## Preliminary results
@@ -324,15 +323,108 @@ Customizable. This version:
 
 - [RW](https://jflournoy.shinyapps.io/rw_model/) is not better than logistic regression <div style = 'float:right;width:100%'><img src = 'https://jflournoy.github.io/ylglearning/articles/ylg_expanding_the_logistic_model_files/figure-html/unnamed-chunk-6-1.png' style = 'width: 50%' /><img src = 'https://jflournoy.github.io/ylglearning/articles/ylg_expanding_the_logistic_model_files/figure-html/brmIxTypeppcheck-1.png' style = 'width: 50%' /></div>
 
-## Preliminary learning, condition
+## Evidence of learning
 
+TABLE ABOUT HERE
 
+## Peer influences on learning?
 
-# Describing motivations
+Do people perform more optimally in either of the peer conditions?
 
+Are indices of learning separable from indices of risk-tolerance?
 
+## Conclusions
+
+- Is learning motivation _and_ risk tolerance modulated by peer experiences?
+    - Why? To what end?
+- Does more fine-grained task modeling improve correlations with convergent measures?
+    - If so, does this allow us to better generalize this task as a measurement of reward-seeking or risk tolerance?
+
+# 4. Measuring adolescent-developing motivations
 
 My approach: How do the motivations behind "motivated adolescent behavior" change?
 
+## Why motivation? {.build}
 
+Many have argued that adolescent changes in reward seeking and risk tolerance may be adaptive:
 
+>- Detachment from family
+>- Exploration of environment
+
+Why?
+
+## Motives and goals matter
+
+Understanding function of changes in reward processing is necessary for complete description of its consequences:
+
+- Health risking behavior
+- Psychopathology?
+
+## Function matters for intervention
+
+- Interventions that satisfice motives will be more successful (Ellis et al, 2014)
+- Motives guide perception and selection of opportunities for behavior
+    - That is, motives help us understand _what might have value_
+
+## Adolescent developing motives
+
+- Two prominent motives: Status, Mate-seeking
+- Fundamental Social Motives captures these 
+- Research is either absent or self-report
+- Need for new measurement
+
+## Reinforcement learning paradigm
+
+- Behavioral
+- Mechanistic
+- Motivational potentiation of learning
+
+## Dissertation Goals
+
+Two mutually reinforcing goals:
+
+1. Preliminary validation of learning task as measure of motives (and motive effects on learning)
+2. Exploration of links between multiple measures of motives, related constructs, and outcomes
+
+## Aims
+
+- Aim 1a: Does framing reinforcement learning with (mate-seeking and status) motivational contexts potentiate learning?
+- Aim 1b: How does motivational potentiation of learning covary with development?
+
+## Aims
+
+- Aim 2: Does the motivational potentiation of learning relate to a constellation of self-report measures that theoretically ought to demonstrate convergence? Specifically, 
+    - (i) what is the relation between motivational potentiation and self-report fundamental social motives; 
+    - (ii) what is the relation between self-report fundamental social motives and motive-congruent outcomes; and 
+    - (iii) what is the relation between motivational potentiation and motive-congruent outcomes.
+
+## Aims
+
+- Aim 3a: Do close others perceive individual differences in motives that are reflected in motivational learning potentiation?
+- Aim 3b: Is there agreement between close others and the self in perceptions of fundamental social motives?
+
+## Social Probabilistic Learning Task
+
+[Demo](http://cas-arcs.uoregon.edu/IRB_SPLIT/)
+
+<img src='median_pr.png' style='max-width: 50%; border:0px' />
+
+- Key parameter of interest: Model-estimated final probability of choosing an optimal response 
+- [Parameter Demo](https://jflournoy.shinyapps.io/rw_model/)
+
+## Progress
+
+_NUMBERS ARE NOT RIGHT_
+
+>- N<sub>Adol</sub> = 100
+>- N<sub>Coll</sub> = 167
+>- N<sub>Inf</sub> = 200
+
+## Future directions
+
+- Connecting motives to means
+    - How does exploitation of opportunities reveal motives?
+    - How to provide opportunities for socially-valued means?
+- Thwarted motives
+    - Relation to stress
+    - Carver & Scheier <img src = 'https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjyw_yyxsHYAhXqlVQKHeJ8DuYQjRwIBw&url=http%3A%2F%2Fpsycnet.apa.org%2Ffulltext%2F2004-12159-001.html&psig=AOvVaw3tcegcSxDDc4sfHfu_h1_3&ust=1515266666892298' style = 'float:right; width: 50%' />
